--- a/.github/workflows/actualizacion.yml
+++ b/.github/workflows/actualizacion.yml
@@ -2,7 +2,7 @@ name: Update README every 1 hour
 
 on:
   schedule:
-     - cron: '0 7-17 * * *'  # Minuto 0, horas del 6 al 18, todos los días
+     - cron: '0 13-23 * * *'  # Minuto 0, horario en utc, +6:00
 #    - cron: '0 * * * *'     # Minuto 0, todos los dias
   workflow_dispatch:
 
